--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -14,7 +14,11 @@ spec:
         app: guestbook-ui
     spec:
       containers:
-      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
+      - image: docker.io/learninglayers/template-html-webapp:latest
         name: guestbook-ui
         ports:
         - containerPort: 80
+
+
+# docker.io/learninglayers/template-html-webapp:latest
+# gcr.io/heptio-images/ks-guestbook-demo:0.2
